--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -30,16 +30,16 @@
     <ClInclude Include="classes\game_scene.h" />
     <ClInclude Include="classes\game_state_machine.h" />
     <ClInclude Include="classes\hud.h" />
-    <ClInclude Include="classes\InitialScene.h" />
-    <ClInclude Include="classes\inventoryDropdown.h" />
-    <ClInclude Include="classes\Item.h" />
+    <ClInclude Include="classes\initial_scene.h" />
+    <ClInclude Include="classes\inventory_dropdown.h" />
+    <ClInclude Include="classes\item.h" />
     <ClInclude Include="classes\locations_scene.h" />
     <ClInclude Include="classes\lore_scene.h" />
     <ClInclude Include="classes\lose_scene.h" />
     <ClInclude Include="classes\pause_button.h" />
     <ClInclude Include="classes\pause_scene.h" />
-    <ClInclude Include="classes\PlayerSaveData.h" />
-    <ClInclude Include="classes\SceneManager.h" />
+    <ClInclude Include="classes\player_save_data.h" />
+    <ClInclude Include="classes\scene_manager.h" />
     <ClInclude Include="classes\settings_scene.h" />
     <ClInclude Include="classes\shelter_hud.h" />
     <ClInclude Include="classes\sleep_station.h" />
@@ -55,44 +55,44 @@
     <ClInclude Include="components\animation_component.h" />
     <ClInclude Include="components\back_to_shelter.h" />
     <ClInclude Include="components\bleedout_component.h" />
-    <ClInclude Include="components\CameraMovement.h" />
-    <ClInclude Include="components\CameraShake.h" />
+    <ClInclude Include="components\camera_movement.h" />
+    <ClInclude Include="components\camera_shake.h" />
     <ClInclude Include="components\charge.h" />
     <ClInclude Include="components\box_collider.h" />
     <ClInclude Include="components\classic_bullet.h" />
     <ClInclude Include="components\concussion_component.h" />
-    <ClInclude Include="components\Dialogue.h" />
+    <ClInclude Include="components\dialogue.h" />
     <ClInclude Include="components\enemy_animation.h" />
     <ClInclude Include="components\enemy_attack_component.h" />
     <ClInclude Include="components\enemy_behaviour_component.h" />
     <ClInclude Include="components\enemy_detection_component.h" />
     <ClInclude Include="classes\weapon_behaviour.h" />
-    <ClInclude Include="components\HoldToSkip.h" />
+    <ClInclude Include="components\hold_to_skip.h" />
     <ClInclude Include="components\hunger_component.h" />
     <ClInclude Include="components\hypothermia_component.h" />
-    <ClInclude Include="components\Image.h" />
-    <ClInclude Include="components\InitialCameraZoom.h" />
-    <ClInclude Include="components\interactableElement.h" />
+    <ClInclude Include="components\image.h" />
+    <ClInclude Include="components\initial_camera_zoom.h" />
+    <ClInclude Include="components\interactable_element.h" />
     <ClInclude Include="components\interactions.h" />
     <ClInclude Include="components\intoxication_component.h" />
-    <ClInclude Include="components\Inventory.h" />
-    <ClInclude Include="components\InventoryController.h" />
-    <ClInclude Include="components\KeyboardPlayerCtrl.h" />
+    <ClInclude Include="components\inventory.h" />
+    <ClInclude Include="components\inventory_controller.h" />
+    <ClInclude Include="components\keyboard_player_ctrl.h" />
     <ClInclude Include="components\loot.h" />
     <ClInclude Include="components\open_station.h" />
     <ClInclude Include="components\pain_component.h" />
     <ClInclude Include="components\parallax_component.h" />
-    <ClInclude Include="components\particleSystem.h" />
+    <ClInclude Include="components\particle_system.h" />
     <ClInclude Include="components\enemy_contact_damage.h" />
     <ClInclude Include="components\player_health_component.h" />
     <ClInclude Include="components\rigid_body.h" />
-    <ClInclude Include="components\TextWithBackGround.h" />
+    <ClInclude Include="components\text_with_background.h" />
     <ClInclude Include="components\player_animation.h" />
     <ClInclude Include="components\ricochet.h" />
-    <ClInclude Include="components\Timer.h" />
+    <ClInclude Include="components\timer.h" />
     <ClInclude Include="components\tiredness_component.h" />
-    <ClInclude Include="components\Transform.h" />
-    <ClInclude Include="components\TransitionComponent.h" />
+    <ClInclude Include="components\transform.h" />
+    <ClInclude Include="components\transition_component.h" />
     <ClInclude Include="components\weapon.h" />
     <ClInclude Include="components\weapon_animation.h" />
     <ClInclude Include="ecs\Component.h" />
@@ -132,16 +132,16 @@
     <ClCompile Include="classes\game_scene.cpp" />
     <ClCompile Include="classes\game_state_machine.cpp" />
     <ClCompile Include="classes\hud.cpp" />
-    <ClCompile Include="classes\InitialScene.cpp" />
-    <ClCompile Include="classes\inventoryDropdown.cpp" />
-    <ClCompile Include="classes\Item.cpp" />
+    <ClCompile Include="classes\initial_scene.cpp" />
+    <ClCompile Include="classes\inventory_dropdown.cpp" />
+    <ClCompile Include="classes\item.cpp" />
     <ClCompile Include="classes\locations_scene.cpp" />
     <ClCompile Include="classes\lore_scene.cpp" />
     <ClCompile Include="classes\lose_scene.cpp" />
     <ClCompile Include="classes\pause_button.cpp" />
     <ClCompile Include="classes\pause_scene.cpp" />
-    <ClCompile Include="classes\PlayerSaveData.cpp" />
-    <ClCompile Include="classes\SceneManager.cpp" />
+    <ClCompile Include="classes\player_save_data.cpp" />
+    <ClCompile Include="classes\scene_manager.cpp" />
     <ClCompile Include="classes\settings_scene.cpp" />
     <ClCompile Include="classes\shelter_hud.cpp" />
     <ClCompile Include="classes\sleep_station.cpp" />
@@ -158,41 +158,41 @@
     <ClCompile Include="components\back_to_shelter.cpp" />
     <ClCompile Include="components\bleedout_component.cpp" />
     <ClCompile Include="components\box_collider.cpp" />
-    <ClCompile Include="components\CameraMovement.cpp" />
-    <ClCompile Include="components\CameraShake.cpp" />
+    <ClCompile Include="components\camera_movement.cpp" />
+    <ClCompile Include="components\camera_shake.cpp" />
     <ClCompile Include="components\charge.cpp" />
     <ClCompile Include="components\classic_bullet.cpp" />
     <ClCompile Include="components\concussion_component.cpp" />
-    <ClCompile Include="components\Dialogue.cpp" />
+    <ClCompile Include="components\dialogue.cpp" />
     <ClCompile Include="components\enemy_animation.cpp" />
     <ClCompile Include="components\enemy_attack_component.cpp" />
     <ClCompile Include="components\enemy_behaviour_component.cpp" />
     <ClCompile Include="components\enemy_detection_component.cpp" />
     <ClCompile Include="classes\weapon_behaviour.cpp" />
-    <ClCompile Include="components\HoldToSkip.cpp" />
+    <ClCompile Include="components\hold_to_skip.cpp" />
     <ClCompile Include="components\hunger_component.cpp" />
     <ClCompile Include="components\hypothermia_component.cpp" />
-    <ClCompile Include="components\InitialCameraZoom.cpp" />
-    <ClCompile Include="components\interactableElement.cpp" />
+    <ClCompile Include="components\initial_camera_zoom.cpp" />
+    <ClCompile Include="components\interactable_element.cpp" />
     <ClCompile Include="components\interactions.cpp" />
     <ClCompile Include="components\intoxication_component.cpp" />
-    <ClCompile Include="components\Inventory.cpp" />
-    <ClCompile Include="components\InventoryController.cpp" />
-    <ClCompile Include="components\KeyboardPlayerCtrl.cpp" />
+    <ClCompile Include="components\inventory.cpp" />
+    <ClCompile Include="components\inventory_controller.cpp" />
+    <ClCompile Include="components\keyboard_player_ctrl.cpp" />
     <ClCompile Include="components\loot.cpp" />
     <ClCompile Include="components\open_station.cpp" />
     <ClCompile Include="components\pain_component.cpp" />
     <ClCompile Include="components\parallax_component.cpp" />
-    <ClCompile Include="components\particleSystem.cpp" />
+    <ClCompile Include="components\particle_system.cpp" />
     <ClCompile Include="components\enemy_contact_damage.cpp" />
     <ClCompile Include="components\rigid_body.cpp" />
-    <ClCompile Include="components\TextWithBackGround.cpp" />
+    <ClCompile Include="components\text_with_background.cpp" />
     <ClCompile Include="components\player_animation.cpp" />
     <ClCompile Include="components\ricochet.cpp" />
-    <ClCompile Include="components\Timer.cpp" />
+    <ClCompile Include="components\timer.cpp" />
     <ClCompile Include="components\tiredness_component.cpp" />
-    <ClCompile Include="components\Transform.cpp" />
-    <ClCompile Include="components\TransitionComponent.cpp" />
+    <ClCompile Include="components\transform.cpp" />
+    <ClCompile Include="components\transition_component.cpp" />
     <ClCompile Include="components\weapon.cpp" />
     <ClCompile Include="components\weapon_animation.cpp" />
     <ClCompile Include="ecs\Entity.cpp" />
