--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -257,7 +257,6 @@
     <ClCompile Include="components\bloodloss_component.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
-    <ClCompile Include="DomeEvents.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -569,7 +568,33 @@
     <ClInclude Include="components\wound_comparator.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
-    <ClInclude Include="DomeEvents.h" />
+    <ClInclude Include="DomeEvents\CursorOff.h">
+      <Filter>Source Files\DomeEvents</Filter>
+    </ClInclude>
+    <ClInclude Include="DomeEvents\CursorOn.h">
+      <Filter>Source Files\DomeEvents</Filter>
+    </ClInclude>
+    <ClInclude Include="DomeEvents\DomeEvents.h">
+      <Filter>Source Files\DomeEvents</Filter>
+    </ClInclude>
+    <ClInclude Include="DomeEvents\Heal.h">
+      <Filter>Source Files\DomeEvents</Filter>
+    </ClInclude>
+    <ClInclude Include="DomeEvents\Jump.h">
+      <Filter>Source Files\DomeEvents</Filter>
+    </ClInclude>
+    <ClInclude Include="DomeEvents\ReturnHome.h">
+      <Filter>Source Files\DomeEvents</Filter>
+    </ClInclude>
+    <ClInclude Include="DomeEvents\Shoot.h">
+      <Filter>Source Files\DomeEvents</Filter>
+    </ClInclude>
+    <ClInclude Include="DomeEvents\WoundStart.h">
+      <Filter>Source Files\DomeEvents</Filter>
+    </ClInclude>
+    <ClInclude Include="DomeEvents\IncludeEvents.h">
+      <Filter>Source Files\DomeEvents</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
@@ -622,6 +647,9 @@
     </Filter>
     <Filter Include="Source Files\game">
       <UniqueIdentifier>{4f169d5b-452d-457a-abfd-0a54f7199ddd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\DomeEvents">
+      <UniqueIdentifier>{ac77cdc4-09ee-4a3f-8fc1-e4504c537822}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
